[gd_scene load_steps=20 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameManger.gd" type="Script" id=3]
[ext_resource path="res://addons/DrunkBull.SuperLightning/src/main/SuperLightning.gd" type="Script" id=4]
[ext_resource path="res://ui/fonts/JetBrainsMono[wght].ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/fonts/SourceHanSansCN-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://AudioManager.gd" type="Script" id=7]
[ext_resource path="res://sound/switch1.ogg" type="AudioStream" id=8]
[ext_resource path="res://sound/sss.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/click1.ogg" type="AudioStream" id=10]
[ext_resource path="res://sound/explosion.wav" type="AudioStream" id=11]
[ext_resource path="res://texture/splash.png" type="Texture" id=12]
[ext_resource path="res://addons/DrunkBull.SuperLightning/assets/resource/lightning_animation_none.tres" type="Animation" id=13]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SplashContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SplashContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "splash"
tracks/0/type = "value"
tracks/0/path = NodePath("SplashContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SplashContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "lose"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "GAMEEND" ]
}

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "CONGRATULATIONS" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AudioStreamGenerator" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="SplashContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashBackground" type="ColorRect" parent="HUD/SplashContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="SplashTexture" type="TextureRect" parent="HUD/SplashContainer"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 12 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashAnimation" type="AnimationPlayer" parent="HUD/SplashContainer/SplashTexture"]
root_node = NodePath("../../..")
autoplay = "splash"
anims/RESET = SubResource( 4 )
anims/splash = SubResource( 5 )

[node name="GameManger" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="SuperLightning" type="Node2D" parent="GameManger"]
script = ExtResource( 4 )
LINE_PIXELS_PER_POINT = 5
LINE_POINTS_FULL_DISPLAY_TIME_PROPORTION = 0.1
LIGHTNING_ANIMATION = ExtResource( 13 )

[node name="Spawn" type="Timer" parent="GameManger"]

[node name="Words" type="Node2D" parent="GameManger"]

[node name="Letters" type="Node2D" parent="GameManger"]

[node name="Message" type="Node2D" parent="GameManger"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="CenterContainer" type="CenterContainer" parent="GameManger/Message"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameManger/Message/CenterContainer"]
margin_left = 437.0
margin_top = 231.0
margin_right = 843.0
margin_bottom = 489.0
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="GameManger/Message/CenterContainer/VBoxContainer"]
margin_right = 406.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameManger/Message/CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 406.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
text = "GAMEEND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameManger/Message"]
anims/lose = SubResource( 2 )
anims/win = SubResource( 3 )

[node name="Tween" type="Tween" parent="GameManger"]

[node name="AudioManager" type="Node" parent="GameManger"]
script = ExtResource( 7 )

[node name="Click" type="AudioStreamPlayer" parent="GameManger/AudioManager"]
stream = ExtResource( 10 )

[node name="Switch" type="AudioStreamPlayer" parent="GameManger/AudioManager"]
stream = ExtResource( 8 )

[node name="Sss" type="AudioStreamPlayer" parent="GameManger/AudioManager"]
stream = ExtResource( 9 )

[node name="Explosion" type="AudioStreamPlayer" parent="GameManger/AudioManager"]
stream = ExtResource( 11 )
volume_db = -6.0

[node name="Noise" type="AudioStreamPlayer" parent="GameManger/AudioManager"]
stream = SubResource( 6 )
volume_db = -15.0

[connection signal="end_game" from="HUD" to="GameManger" method="_on_end_game"]
[connection signal="start_game" from="HUD" to="GameManger" method="_on_start_game"]
[connection signal="timeout" from="GameManger/Spawn" to="GameManger" method="_on_Spawn_timeout"]
[connection signal="animation_finished" from="GameManger/Message/AnimationPlayer" to="HUD" method="_on_AnimationPlayer_animation_finished"]
